Pin H2 database to Java 8 compatible version